Attempt to fix lighthouse accessibility contrast issue

--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -13,7 +13,7 @@ $big-text-size: 1.15rem;
 $small-text-size: 0.87rem;
 
 // Color
-$primary-color: #007aff;
+$primary-color: #006FF5;
 $secondary-color: #007aff77;
 $dark: #222;
 $gray: #666;
